# dfml

./: README.md  dataframe.opam  dune-project
benchmark/: dune  int_serie.ml  int_serie_no_gc.ml  num_serie.ml  serie.ml  serie_direct.ml  serie_no_deriv.ml  serie_no_gc.ml  str_serie.ml
lib/: dataframe.ml  dataframe.mli  dune
test/: dataframe_tests.ml  dune  merge.ml  serie.ml  test_dataframe.ml
